--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat:wght@200;300;400;500;600;700;800&display=swap");
 body {
-  height: 80vh;
+  height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -20,4 +20,16 @@ body {
   font-family: "Montserrat", sans-serif;
   list-style: none;
   text-decoration: none;
+}
+
+.container {
+  height: 733px;
+  width: 800px;
+  border-radius: 5px;
+  border: 3px solid white;
+}
+
+
+button.active {
+  background-color: rgb(60, 62, 62);
 }
