--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,9 +1,24 @@
 .navigation {
-  color: white;
+  border-radius: 5px;
   background-color: rgb(40, 40, 40);
   padding: 2rem;
 }
 
-.links li a {
+.links {
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+
+.navli {
+  font-size: 0.98rem;
+  padding: 10px;
+  border-radius: 10px;
   color: white;
+  transition: 0.3s;
+}
+
+.navli:hover {
+  background-color: rgb(74, 74, 74);
+  transition: 0.3s;
 }
