--- a/src/components/AddTaske.module.css
+++ b/src/components/AddTaske.module.css
@@ -1,35 +1,126 @@
+/*To do Part*/
+
+.containerGlobal {
+  display: flex;
+  gap: 2rem;
+  padding: 4rem 2rem;
+}
+
+/*Date*/
+
+.date {
+  display: flex;
+  flex-direction: column;
+
+  gap: 1rem;
+}
+
+.myDay {
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: var(--white);
+}
+
+.day {
+  font-size: 0.89rem;
+  color: var(--white);
+}
+
+.todo {
+  display: grid;
+  grid-template-rows: 100px 400px 100px;
+  gap: 2rem;
+  min-height: 600px;
+
+}
 
 .input {
-    border-radius: 10px;
-    border: 2px solid var(--white);
-    background-color: transparent;
-    color: var(--white);
-    padding: 10px 18px;
-    outline: 0;
-    width: 300px;
-  }
+  border-radius: 10px;
+  border: 2px solid var(--white);
+  background-color: transparent;
+  color: var(--white);
+  padding: 10px 18px;
+  outline: 0;
+  width: 300px;
+}
+
+.add {
+  display: flex;
+  gap: 1rem;
+}
+
+.button {
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  color: #fff;
+  background: rgb(123, 0, 255);
+  padding: 10px 30px;
+  border: solid #0066cc 0px;
+  border-radius: 11px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.button:hover {
+  transition: 0.4s;
+  transform: translateY(-0px);
+  background: rgb(146, 45, 255);
+}
+
+
+
+/*modal*/
+
+.modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  background-color: rgb(51, 51, 51);
+  padding: 2.5rem;
+  border-radius: 5px;
+  top: 30%;
+  left: 35%;
+  z-index: 100000;
+}
+
+.question {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   
-  .add {
-    display: flex;
-    gap: 1rem;
-  }
+}
+.question h3 {
+  font-weight: 600;
+  font-size: 1.3rem;
+}
+
+.question span {
+  font-size: 0.8rem;
+}
+
+
+.buttons {
+  display: flex;
   
-  .button {
-    font-family: Roboto, sans-serif;
-    font-weight: 700;
-    font-size: 14px;
-    color: #fff;
-    background: rgb(123, 0, 255);
-    padding: 10px 30px;
-    border: solid #0066cc 0px;
-    border-radius: 11px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .button:hover {
-    transition: 0.4s;
-    transform: translateY(-0px);
-    background: rgb(146, 45, 255);
-  }
+  gap: 1rem;
+}
+
+.buttons button {
+  font-weight: 500;
+  font-size: 13px;
+  color: #fff;
+  background: rgb(196, 10, 10);
+  padding: 10px 30px;
+  border: solid #0066cc 0px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.cancel {
+  background-color: rgb(96, 96, 96) !important;
+}
