--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: #272727;
 }
 
 :root {
@@ -17,7 +17,7 @@ body {
 * {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   list-style: none;
   text-decoration: none;
 }
@@ -31,5 +31,5 @@ body {
 
 
 button.active {
-  background-color: rgb(60, 62, 62);
+  background-color: rgb(152, 0, 253);
 }
