--- a/src/components/AddTaske.module.css
+++ b/src/components/AddTaske.module.css
@@ -4,6 +4,15 @@
   display: flex;
   gap: 2rem;
   padding: 4rem 2rem;
+  position: relative;
+}
+
+/**/
+
+.importantTitle {
+  font-size: 1.8rem;
+  font-weight: 800;
+  color: var(--purple);
 }
 
 /*Date*/
@@ -11,19 +20,19 @@
 .date {
   display: flex;
   flex-direction: column;
-
   gap: 1rem;
 }
 
 .myDay {
   font-size: 1.8rem;
-  font-weight: 500;
+  font-weight: 800;
   color: var(--white);
 }
 
 .day {
   font-size: 0.89rem;
-  color: var(--white);
+  font-weight: 700;
+  color: var(--purple);
 }
 
 .todo {
@@ -39,7 +48,8 @@
   border: 2px solid var(--white);
   background-color: transparent;
   color: var(--white);
-  padding: 10px 18px;
+  font-size: 0.99rem;
+  padding: 12px 22px;
   outline: 0;
   width: 300px;
 }
@@ -81,8 +91,8 @@
   background-color: rgb(51, 51, 51);
   padding: 2.5rem;
   border-radius: 5px;
-  top: 30%;
-  left: 35%;
+  top: 20%;
+  left: 30%;
   z-index: 100000;
 }
 
@@ -104,7 +114,6 @@
 
 .buttons {
   display: flex;
-  
   gap: 1rem;
 }
 
