--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -4,6 +4,9 @@
   flex-direction: column;
   gap: 1rem;
   padding-left: 1rem;
+  border: 1px solid var(--white);
+  width: 450px;
+  padding: 2rem 0rem 0rem 3rem;
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -84,34 +87,32 @@ input[type="checkbox"]:checked:after {
 }
 
 .delete {
-  display: flex;
-  justify-content: center;
-  align-content: center;
+ align-self: flex-end;
   justify-self: start;
-  color: white;
+  color: rgb(255, 0, 0);
+  font-size: 1.3rem;
   font-weight: 900;
   border-radius: 50%;
-  background-color: red;
+  background-color: transparent;
   border: 0;
-  padding: 0.3rem 0.5rem;
   transition: 0.3s;
 }
 
 .delete:hover {
   cursor: pointer;
   transition: 0.3s;
-  background-color: rgb(245, 167, 167);
+  color: rgb(245, 167, 167);
 }
 
 .star {
   justify-self: end;
   color: white;
   font-weight: 900;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   border-radius: 50%;
-  background-color: rgb(0, 0, 0);
+  background-color:transparent;
   border: 0;
-  padding: 0.2rem 0.5rem;
+  padding: 0.1rem 0.5rem;
   transition: 0.3s;
   cursor: pointer;
 }
