--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,11 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #272727;
+  overflow: hidden;
 }
+
+
+
 
 :root {
   --white: #f9f9f9;
@@ -27,6 +31,14 @@ body {
   width: 800px;
   border-radius: 5px;
   border: 3px solid white;
+}
+
+.ToDoAPP  {
+  display: flex;
+  justify-content:center;
+  padding-bottom: 60px;
+  font-size: 3.5rem; 
+  color: var(--white);
 }
 
 
