--- a/src/components/AddTaske.module.css
+++ b/src/components/AddTaske.module.css
@@ -7,8 +7,6 @@
   position: relative;
 }
 
-/**/
-
 .importantTitle {
   font-size: 1.8rem;
   font-weight: 800;
@@ -65,7 +63,7 @@
   color: #fff;
   background: rgb(123, 0, 255);
   padding: 10px 30px;
-  border: solid #0066cc 0px;
+  border: 0;
   border-radius: 11px;
   display: flex;
   align-items: center;
@@ -101,6 +99,7 @@
   top: 20%;
   left: 30%;
   z-index: 100000;
+  color: white;
 }
 
 .question {
