adicionei a funcionalidade de separar as tarefas concluidas das demais, mas ainda esta em andamento e por isso tem alguns bugs que irei arrumando ao longo do tempo.

--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -96,6 +96,7 @@ input[type="checkbox"]:checked:after {
   font-weight: 900;
   transition: 0.3s;
   font-size: 23px;
+  grid-column: 5;
 }
 
 .delete:hover {
