--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #272727;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 :root {
