--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ html {
 
 
 :root {
-  --white: #f9f9f9;
+  --white: #f1f1f1;
   --purple: rgb(149, 59, 245);
   --purpleWhite: rgb(210, 147, 255);
   --blackback: rgb(58, 58, 58);
@@ -33,7 +33,7 @@ html {
   height: 733px;
   width: 800px;
   border-radius: 5px;
-  border: 3px solid white;
+  border: 1px solid var(--white);
 }
 
 .ToDoAPP {
