--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,24 +1,26 @@
 .navigation {
   border-radius: 5px;
   background-color: rgb(43, 43, 43);
-  padding: 2rem;
+  padding: 2rem 6rem 2rem 1rem;
   max-height: 400px;
 }
 
 .links {
   display: flex;
   flex-direction: column;
+  justify-content: start;
   gap: 1.3rem;
 }
 
 .navli {
-  font-size: 0.98rem;
+  font-size: 0.87rem;
   border-radius: 10px;
   color: white;
   transition: 0.3s;
-  display: flex;
+  display: grid;
+  grid-template-columns: 40px 1fr;
   align-items: center;
-  gap: 0.3rem;
+  gap: 0.5rem;
 }
 
 .navli:hover {
@@ -27,6 +29,10 @@
 }
 
 .navli svg {
-  height: 20px;
-  width: 20px;
+  width: 30px;
+  justify-self: center;
+}
+
+.star svg {
+  width: 24px;
 }
