funcionalidades estao 100% e bugs de id resolvidos

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,7 +1,7 @@
 .navigation {
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: rgb(20, 20, 20);
-  max-height: 400px;
+  padding: 1rem 0rem;
 }
 
 .links {
