--- a/src/components/AddTaske.module.css
+++ b/src/components/AddTaske.module.css
@@ -3,13 +3,12 @@
 .containerGlobal {
   display: flex;
   gap: 2rem;
-  padding: 4rem 2rem;
   position: relative;
 }
 
 .importantTitle {
   font-size: 1.8rem;
-  font-weight: 800;
+  font-weight: 700;
   color: var(--purple);
 }
 
@@ -19,6 +18,7 @@
   display: grid;
   grid-template-rows: 100px 400px 100px;
   min-height: 600px;
+  padding: 4rem 0rem;
 }
 
 .date {
@@ -31,7 +31,6 @@
   font-size: 1.8rem;
   font-weight: 700;
   color: var(--purple);
-  /* color: var(--white); */
 }
 
 .day {
@@ -58,10 +57,10 @@
 
 .button {
   font-family: Roboto, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  color: var(--black);
-  background:var(--white);
+  font-weight: 600;
+  font-size: 14px;
+  color: var(--white);
+  background: var(--purple);
   padding: 0px 25px;
   border: 0;
   border-radius: 5px;
@@ -116,13 +115,13 @@
   font-size: 0.8rem;
 }
 
-.buttons {
+.buttonsSure {
   display: flex;
   gap: 1rem;
 }
 
-.buttons button {
-  font-weight: 500;
+.buttonsSure button {
+  font-weight: 200;
   font-size: 13px;
   color: #fff;
   background: rgb(196, 10, 10);
@@ -146,20 +145,30 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 92%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 .editingTask {
   position: absolute;
-  left: 5%;
+  left: 8.5%;
   top: 25%;
+  padding: 4rem 4rem;
+  background-color: #0f0f0f;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  animation: zoomAnime 0.6s forwards;
+}
+
+.editingPart {
   display: flex;
   gap: 1rem;
-  padding: 7rem 4rem;
-  background-color: #0f0f0f;
   border-radius: 10px;
-  animation: zoomAnime 0.6s forwards;
+}
+
+.editTitle {
+  color: var(--white);
 }
 
 @keyframes zoomAnime {
