--- a/src/components/AddTaske.module.css
+++ b/src/components/AddTaske.module.css
@@ -3,57 +3,79 @@
 .containerGlobal {
   display: flex;
   gap: 3.5rem;
+  position: relative;
   height: 100%;
-}
-
-.importantTitle {
-  font-size: 1.8rem;
-  font-weight: 700;
-  color: var(--purple);
 }
 
 /*Date*/
 
 .todo {
   display: grid;
-  grid-template-rows: 100px 450px 100px;
+  grid-template-rows: 70px 450px 100px;
   min-height: 600px;
-  padding: 4rem 0rem;
+  padding: 2.5rem 0rem;
 }
 
 .date {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.3rem;
+  align-self: self-end;
 }
 
 .myDay {
-  font-size: 1.8rem;
-  font-weight: 700;
-  background-image: linear-gradient(
-    to right,
-    rgb(149, 59, 245),
-    rgb(220, 183, 255)
-  );
+  display: flex;
+  align-items: center;
+  height: fit-content;
+  gap: 1.5rem;
+  font-size: 2rem;
+  font-weight: 900;
+  background: rgb(255, 55, 0);
   background-clip: text;
   color: transparent;
+}
+
+.planet {
+  align-self: flex-end;
+  height: 50px;
+  animation: rotateClockwise 4s linear 0s infinite alternate;
+}
+
+@keyframes rotateClockwise {
+  0%,
+  100% {
+    transform: rotate(0deg) translateX(10px) rotate(0deg);
+  }
+  50% {
+    transform: rotate(360deg) translateX(10px) rotate(-360deg);
+  }
+}
+
+@keyframes rotateCounterClockwise {
+  0%,
+  100% {
+    transform: rotate(360deg) translateX(10px) rotate(-360deg);
+  }
+  50% {
+    transform: rotate(0deg) translateX(10px) rotate(0deg);
+  }
 }
 
 .day {
   font-size: 0.89rem;
   font-weight: 600;
-  color: var(--gray);
+  color: var(--white);
 }
 
 .input {
   border-radius: 5px;
-  border: 1px solid var(--white);
+  border: 1px solid var(--gray);
   background-color: transparent;
   color: var(--white);
-  font-size: 0.99rem;
-  padding: 14px 24px;
+  font-size: 0.95rem;
+  padding: 18px 24px;
   outline: 0;
-  width: 300px;
+  width: 350px;
 }
 
 .add {
@@ -64,10 +86,10 @@
 .button {
   font-family: Roboto, sans-serif;
   font-weight: 600;
-  font-size: 14px;
+  font-size: 13px;
   color: var(--white);
-  background: var(--purple);
-  padding: 0px 25px;
+  background: var(--orange);
+  padding: 0px 20px;
   border: 0;
   border-radius: 5px;
   display: flex;
@@ -78,8 +100,7 @@
 
 .button:hover {
   transition: 0.4s;
-  transform: translateY(-0px);
-  background: rgb(226, 226, 226);
+  background: rgb(162, 87, 247);
 }
 
 .button.buttonCancel {
@@ -87,7 +108,7 @@
 }
 
 .button.buttonCancel:hover {
-  background: rgb(255, 88, 88);
+  background: rgb(253, 64, 64);
   transition: 0.3s;
 }
 
@@ -98,11 +119,11 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
-  background-color: rgb(51, 51, 51);
+  background-color: rgb(35, 35, 35);
   padding: 2.5rem;
   border-radius: 5px;
-  top: 20%;
-  left: 30%;
+  top: 40%;
+  left: 35%;
   z-index: 100000;
   color: white;
 }
@@ -128,7 +149,7 @@
 
 .buttonsSure button {
   font-weight: 200;
-  font-size: 13px;
+  font-size: 14px;
   color: #fff;
   background: rgb(196, 10, 10);
   padding: 10px 30px;
@@ -157,9 +178,9 @@
 
 .editingTask {
   position: absolute;
-  left: 8.5%;
-  top: 25%;
-  padding: 4rem 4rem;
+  left: 12%;
+  top: 30%;
+  padding: 2rem 2rem;
   background-color: #0f0f0f;
   display: flex;
   flex-direction: column;
